# market-backstage

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  README_ZH.md  autoapp.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
market/: app.py  exceptions.py  extensions.py  logging.py  settings.py
market/api/: storage.py
market/api/v1/: config.py  storage.py
market/api/v1/product/: brand.py  category.py  sku.py  spec.py  spu.py  store.py
market/constant/: message.py  product.py  storage.py
market/hook/: base.py  minio.py  redis.py  sqla.py
market/model/: __init__.py  base.py  event.py
market/model/product/: brand.py  category.py  product.py  spec.py  store.py
market/repository/: base.py
market/repository/product/: __init__.py  brand.py  category.py  product.py  spec.py  store.py
market/schema/: base.py  field.py  mixin.py  storage.py
market/schema/product/: brand.py  category.py  sku.py  spec.py  spu.py  store.py
market/service/: __init__.py  base.py  storage.py
market/service/product/: __init__.py  brand.py  category.py  sku.py  spec.py  spu.py  store.py
market/util/: blueprint.py  json.py  openapi.py  response.py
requirements/: development.txt  production.txt
tests/: test_market_backstage.py
