[tool.poetry]
name = "market-backstage"
version = "0.1.0"
description = "market-backstage is a Market backstage management system with [flask]"
authors = ["huangkai <h1770360848@outlook.com>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.2"
flask-smorest = "^0.30.0"
environs = "9.3.2"
flask-sqlalchemy = "^2.5"
flask-migrate = "^2.7"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.2"
pymysql = "^1.0"
loguru = "^0.5.3"
minio = "^7.0.3"
gunicorn = "^20.1.0"
eventlet = "^0.30.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.8.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
skip-string-normalization = true

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
